Made menu bar's position fixed and increased the z-index parameter of the element to place element on top of the html's stack and give presedence to element if it were to superimpose other elements
Added additional html div node to wrap main layout of site and attached refs to menu as well as div container to get calculated height of menu bar and dynamically push the div container down by taking the calculated height of menu and pplaying that resultant and assigning that to the paddingTop inline styling of the div container

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -73,6 +73,15 @@
   font-weight: bold;
 }
 
+/* menu bar */
+
+.menu-bar {
+  position: fixed;
+  width: 100%;
+  background-color: rgb(21, 127, 251);
+  z-index: 50;
+}
+
 /* black shade form 10-1 */
 .black-10 {
   background: #f2f2f2;
